--- a/css/style-servicios.css
+++ b/css/style-servicios.css
@@ -571,19 +571,24 @@ header .navbar{
       height: 50vh;
     }
     .hero-servicio__content h1 {
-      font-size: 1rem;
+      font-size: 2.6rem;
     }
     .hero-servicio__content p {
-      font-size: 0.7rem;
+      font-size: 1.23rem;
     }
-.service-section {
+    .service-section {
         padding: 60px 0;
     }
     h2, .service-section h2 {
         font-size: 2rem;
         line-height: 1.3;
     }
+    .service-section p{
+      font-size: 1.1rem;
+    }
+
     .service-section h3 {
+      font-size: 1.7rem;
         margin-top: 40px;
     }
     .service-description {
