--- a/css/style-contacto.css
+++ b/css/style-contacto.css
@@ -274,7 +274,8 @@ ul {
     font-weight: var(--font-weight-bold);
     color: var(--white-color);
     max-width: 800px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 .hero_subtitle {
@@ -606,10 +607,12 @@ button[type="submit"]:hover {
         transform: translate(-50%, -50%);       
     }
     .hero_title {
-        font-size: 2.8rem;
+        font-size: 2.2rem;
+        margin-top: 40px;
+        margin-bottom: 10px;
     }
     .hero_subtitle {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
     }
 
     /* hamburguesa visible */
@@ -661,10 +664,12 @@ button[type="submit"]:hover {
         transform: translate(-50%, -50%);
     }
     .hero_title {
-        font-size: 2.5rem;
+        font-size: 2rem;
+        margin-top: 40px;
+        margin-bottom: 10px;
     }
     .hero_subtitle {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
     }
 
     .contacto-contenido {
@@ -721,10 +726,12 @@ button[type="submit"]:hover {
         transform: translate(-50%, -50%);
     }
     .hero_title {
-        font-size: 2rem;
+        margin-top: 50px;
+        font-size: 1.8rem;
+        margin-bottom: 10px;
     }
     .hero_subtitle {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
     .form-row { flex-direction: column; gap: 1rem; }
@@ -777,7 +784,7 @@ button[type="submit"]:hover {
         transform: translate(-50%, -50%);
     }
     .hero_title {
-        font-size: 1.3rem;
+        font-size: 1.45rem;
         margin-bottom: 10px;
     }
     .hero_subtitle {
