--- a/css/style-nosotros.css
+++ b/css/style-nosotros.css
@@ -101,29 +101,34 @@
 }
 
 body{
+
     margin: 0;
     font-family: "Gotham", sans-serif;
     font-weight: 400;
 }
 
 h1{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-xxl);
     font-weight: var(--font-weight-bold);
     color: var(--universo-blue);
 }
 
 h2{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-xl);
     font-weight: var(--font-weight-semibold);
     color: var(--bice-blue)
 }
 
 h3{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-m);
     font-weight: var(--font-weight-medium);
 }
 
 p{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-n);
     font-weight: var(--font-weight-normal);
 }
