--- a/css/style-servicios.css
+++ b/css/style-servicios.css
@@ -107,21 +107,25 @@ body{
 }
 
 h1{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-xxl);
     font-weight: var(--font-weight-bold);
 }
 
 h2{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-xl);
     font-weight: var(--font-weight-semibold);
 }
 
 h3{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-m);
     font-weight: var(--font-weight-medium);
 }
 
 p{
+  font-family: "Gotham", sans-serif;
     font-size: var(--font-size-n);
     font-weight: var(--font-weight-normal);
 }
